fixed spacing in results page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,3 +61,14 @@
   margin-top: 50px;
   border-radius: 5px;
 }
+#artistImage {
+  margin-left: 20px;
+}
+
+.row {
+  margin-left: 20px;
+}
+
+#text-style {
+  margin-left: -5px;
+}
